modules/k8s/aws-alb/test/templates/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: test
spec:
  gatewayClassName: test
  listeners:
  - name: http
    port: 80
    protocol: HTTP
