modules/k8s/aws-alb/test/templates/gatewayclass.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: test
spec:
  controllerName: gateway.k8s.aws/alb
