modules/k8s/aws-alb/test/templates/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: test
spec:
  parentRefs:
  # name and namespace are overwritten by the test code
  - name: test
    sectionName: http
  hostnames:
  - test.infralib.entigo.io
  rules:
  - backendRefs:
    - name: test
      port: 80
