modules/k8s/aws-alb/test/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test
spec:
  selector:
    app: test-backend
  ports:
  - port: 80
    targetPort: 8080
